kubernetes/apps/media/sonarr/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  namespace: media
  annotations:
    external-dns.k8s.io/audience: internal
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Sonarr"
    gethomepage.dev/description: "TV series"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=sonarr"
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "sonarr.svg"
    gethomepage.dev/href: "https://sonarr.lab.supermorphic.com"
spec:
  hostnames:
    - sonarr.lab.supermorphic.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: networking
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: sonarr
          port: 8989
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
